<resources>
    <string name="app_name">MiPrimerApp</string>
    <string name="edit_message">Edit Message</string>
    <string name="button_send">Send</string>
    <string name="text_hour_example">12:00</string>
    <string name="text_city_example">20 March, San Salvador</string>
    <string name="activity_main_title">Titulo 1</string>
    <string name="ciudad_1">Ciudad 1</string>
    <string name="ciudad_2">Ciudad 2</string>
    <string name="ciudad_3">Ciudad 3</string>
    <string name="_00_00">00:00</string>
</resources>
